# Epoll-based-fault-diagnosis-system-server

./: AudioRcvServer  AudioServer.pid  README.md  note.txt
audioclient/: AudioClient  AudioClient.cpp  AudioClient.h  AudioClient.sln  AudioClient.vcxproj  AudioClient02  AudioDataUnit.h  CCfgFileParser.cpp  CCfgFileParser.h  CMakeCache.txt  CMakeLists.txt  ClientManage.cpp  ClientManage.h  Makefile  MyFile.cpp  MyFile.h  TcpClient.cpp  TcpClient.h  Wave.cpp  Wave.h  _updatelog.txt  backup  cmake_install.cmake  main.cpp  mak  mylog.cpp  mylog.h
audioclient/New-TCP/: TcpClient.cpp  TcpClient.h
audioclient/Old-TCP/: TcpClient.cpp  TcpClient.h
audioserver/: AudioDataUnit.h  AudioServer.cpp  AudioServer.h  AudioServer.sln  AudioServer.vcxproj  AudioServer.vcxproj.filters  CCfgFileParser.cpp  CCfgFileParser.h  CMakeLists.txt  EpollServer.cpp  EpollServer.h  Makefile  MyFile.cpp  MyFile.h  _new.txt  _updatelog.txt  global.cpp  global.h  main.cpp  mak
